--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
     box-shadow: 0px 5px 30px -5px rgba(0, 0, 0, 0.4);
 }
 
+/* Display */
+
 .calculator-display {
     background: black;
     color: white;
@@ -36,4 +38,24 @@ body {
     font-size: 45px;
     font-family: 'Lucida Console', sans-serif;
     font-weight: 100;
+    overflow-x: auto;
 }
+
+/* Custom Scrollbar */
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #777;
+  }
