--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 
 .calculator {
     background-color: white;
-    width: 460px;
+    width: 400px;
     border-radius: 12px;
     box-shadow: 0px 5px 30px -5px rgba(0, 0, 0, 0.4);
 }
@@ -58,4 +58,59 @@ body {
   
   ::-webkit-scrollbar-thumb:hover {
     background: #777;
+  }
+
+  /* Buttons */
+
+  .calculator-buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+    padding: 10px;
+  }
+
+  button {
+    min-height: 50px;
+    font-size: 20px;
+    font-weight: 100;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background: rgb(199, 199, 199);
+  }
+
+  button:hover {
+    filter: brightness(106%);
+  }
+
+  button:active {
+    transform: translateY(1px);
+  }
+
+  button:focus {
+    outline: none;
+  }
+
+  .operator {
+    background: grey;
+    color: white;
+    font-size: 30px;
+  }
+
+  .clear {
+    background: orange;
+  }
+
+  .equal-sign {
+    grid-column: -2;
+    grid-row: 2 / span 4;
+    background: cornflowerblue;
+  }
+
+  /* Media Query: Large Smartphone (vertical) */
+
+  @media screen and (max-width: 600px) {
+    .calculator {
+      width: 95%;
+    }
   }
